--- a/RPI_Blinking_Led/overview.html
+++ b/RPI_Blinking_Led/overview.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Blinking led</h1>
-This is simplest tutorial You can image. From the webPage with button You will change the state of led attached to You ESP. 
+This is simplest tutorial You can image. From the webPage with button You will change the state of led attached to You RasbperryPi
 Ofocurse as always with RemoteMe You will be able to control your led also outside local network :)
 
 </body>
