--- a/001 ESP_Blinking_Led/connections.html
+++ b/001 ESP_Blinking_Led/connections.html
@@ -6,8 +6,8 @@
 <body>
 <img src="connections.png" alt="connections"/>
 <ul>
-    <li> Led Cathode through resistor to GND</li>
-    <li> Led anode to D1 port on esp</li>
+    <li> LED Cathode through a resistor to GND</li>
+    <li> LED Anode to D1 pin of ESP</li>
 </ul>
 </body>
 
