--- a/001 ESP_Blinking_Led/final.html
+++ b/001 ESP_Blinking_Led/final.html
@@ -1,2 +1,2 @@
-Contratulations Everything went OK :)<br/>
-Please Follow Instrucitons next to device belt to run Your project
+Contratulations project built succesfully :)<br/>
+Please follow instrucitons next to device belt to run your project
