botland as partner

--- a/010 RPI_Blinking_Led/connections.html
+++ b/010 RPI_Blinking_Led/connections.html
@@ -6,8 +6,8 @@
 <body>
 <img src="connections.png" alt="connections"/>
 <ul>
-    <li> Led Cathode through resistor to GND</li>
-    <li> Led anode to GPIO 18 port on RasbperryPi</li>
+    <li> LED Cathode through resistor to GND</li>
+    <li> LED Anode to GPIO pin 18 on Raspberry Pi</li>
 </ul>
 </body>
 
