--- a/010 RPI_Blinking_Led/overview.html
+++ b/010 RPI_Blinking_Led/overview.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Blinking led</h1>
-This is simplest tutorial You can image. From the webPage with button You will change the state of led attached to You RasbperryPi
-Ofocurse as always with RemoteMe You will be able to control your led also outside local network :)
+<h1>Blinking LED</h1>
+This is one of the simplest project for beginners. From the webPage using a button you can change the state of LED attached to the Raspberry Pi. 
+Ofocurse as always with RemoteMe you will be able to control your LED over the internet from any corner of the world :)
 
 </body>
 
