--- a/010 RPI_Blinking_Led/final.html
+++ b/010 RPI_Blinking_Led/final.html
@@ -1,2 +1,2 @@
-Contratulations Everything went OK :)<br/>
-Please Follow Instrucitons next to device belt to run Your project
+Contratulations project build succesful :)<br/>
+Please Follow Instrucitons next to device belt to run your project
