botland as partner

--- a/020 RpiCar/overview.html
+++ b/020 RpiCar/overview.html
@@ -4,10 +4,9 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Blinking led</h1>
-This is simplest tutorial You can image. From the webPage with button You will change the state of led attached to You RasbperryPi
-Ofocurse as always with RemoteMe You will be able to control your led also outside local network :)
-
+<h1>RaspberryPI FPV car</h1>
+We will build 4wd car – the steering will be similar like in a tank – to turn one side of wheels will rotate with different speed than other. At the car will be placed camera on special holder where we can change camera position. The robot will be controlled by web browser (chrome or firefox at desktop, or firefox at mobile phone), at the browser, We will get camera video ( with only 200ms latency), and from the browser, we can control the car movements and camera position.
+<img src="coverBig.jpg" style="display:block;width:100%"></img>
 </body>
 
 </html>
