--- a/020 RpiCar/connections.html
+++ b/020 RpiCar/connections.html
@@ -2,13 +2,33 @@
 <head>
 
 <link rel="stylesheet" href="../general.css" />
+
 </head>
 <body>
-<img src="connections.png" alt="connections"/>
-<ul>
-    <li> Led Cathode through resistor to GND</li>
-    <li> Led anode to GPIO 18 port on RasbperryPi</li>
-</ul>
+
+<h2>Schematic</h2>
+<a href="connections.png" tyle="width:100%" download="connections">
+    <img src="connections.png" style="width:100%" alt="connections"/>
+</a>
+
+
+<a href="connections.png" download="connections">downlaod Image in full size</a>
+
+<h2>PCB</h2>
+You can also download files of PCB for cleaner connenctions
+<img src="pcb.png" style="width:100%" alt="connections"/>
+<a href="pcb.zip" download="pcb">download PCB files</a>
+<ol start="1">
+    <li>PWM input for drive motors Should be connected to PWM module 15’th and 16th pins</li>
+    <li>Power input for drive motors (check what maximum voltage your motors can work with)</li>
+    <li>Power for RasbperryPi and PWM module – have to be exactly 5V</li>
+    <li>Drive motor outputs (there are two outputs because we will pair drive motors )</li>
+    <li>Servo Mechanisms power – also You have to check what voltage is good for them</li>
+    <li>Jumper its present power from 5th input will power also drive motors so no need to connect anything to input 2</li>
+    <li>Jumper if present RasbperryPi will be power from 3rd input – before put jumper here check if connections are OK – You don’t want to burn your RPi</li>
+    <li>Lets solder here cables since we don’t need logic converters</li>
+</ol>
+
 </body>
 
 </html>
