Rpi car quickstart project next

--- a/020_RpiCar/webpage/index.html
+++ b/020_RpiCar/webpage/index.html
@@ -57,26 +57,26 @@ window.addEventListener("load",function() {
 </script>
 <camera autoConnect="true" showInfo="true" class="cameraView"></camera>
 <connectionstatus webSocket="true" directConnection="false" camera="true"></connectionstatus>
-<variable component="cameraMouseTrack" type="SMALL_INTEGER_2" style="display:block" name="$$camera_variable$$" xMin="298"
+<variable component="cameraMouseTrack" type="SMALL_INTEGER_2" style="display:block" name="cameraPos" xMin="298"
           xMax="830" invertX="true" yMin="223" yMax="723" invertY="true" requiredMouseDown="true"
-          reset="true"></variable>
+          reset="true" onlyDirect="true"></variable>
 
 <div class="joystickButtons">
     <div class="buttons">
-        <variable class="gyroscope" component="gyroscope" type="SMALL_INTEGER_2" name="$$camera_variable$$"
-                  label="Gyroscope Camera"
-                  xMin="298" xMax="830" xRange="19" invertX="true" yMin="223" yMax="725" yRange="20"
-                  invertY="false"></variable>
-        <variable class="gyroscope" component="gyroscope" type="SMALL_INTEGER_2" name="$$drive_variable$$"
+        <variable class="gyroscope" component="gyroscope" type="SMALL_INTEGER_2" name="cameraPos"
+                  label="Gyroscope Camera" orientationSupport="true"
+                  xMin="298" xMax="830" xRange="19" invertX="true" yMin="223" yMax="723" yRange="20"
+                  invertY="false" onlyDirect="true"></variable>
+        <variable class="gyroscope" component="gyroscope" type="SMALL_INTEGER_2" name="drive"
                   label="Gyroscope Drive"
                   xMin="-512" xMax="512" xRange="19" invertX="false" yMin="-512" yMax="512" yRange="20"
-                  invertY="false"></variable>
+                  invertY="false" onlyDirect="true"></variable>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect gyroscope" onClick="toggleFullScreen()">fullscreen	</button>
 
     </div>
     <div class="joystickParent">
-        <variable class="joystick" component="joystick_simple" type="SMALL_INTEGER_2" name="$$drive_variable$$"
-                  xRange="1024" yRange="1024"></variable>
+        <variable class="joystick" component="joystick_simple" type="SMALL_INTEGER_2" name="drive"
+                  xRange="1024" yRange="1024" onlyDirect="true"></variable>
     </div>
     <div style="clear: both;"/>
 </div>
