update project files

--- a/020_RpiCar/connections.html
+++ b/020_RpiCar/connections.html
@@ -17,7 +17,7 @@
 <h2>PCB</h2>
 You can also download files of PCB for cleaner connenctions
 <img src="pcb.png" style="width:100%" alt="connections"/>
-<a href="pcb.zip" download="pcb">download PCB files</a>
+<a href="http://remoteme.org/public/projects/rpiCar/pcb.zip" download="pcb">download PCB files</a>
 <ol start="1">
     <li>PWM input for drive motors Should be connected to PWM module 15’th and 16th pins</li>
     <li>Power input for drive motors (check what maximum voltage your motors can work with)</li>
