next tutorials and stuff

--- a/00030_ESP_Temp_Press_Humm/webpage/index.html
+++ b/00030_ESP_Temp_Press_Humm/webpage/index.html
@@ -48,9 +48,9 @@
 <script>
 
 </script>
-<variable  component="gauge"  type="INTEGER"  name="humm" label="Hummidity %" widthheight="300" min="0" max="100" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
-<variable  component="gauge"  type="INTEGER"  name="temp" label="temperature C" widthheight="300" min="-60" max="60" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
-<variable  component="gauge"  type="INTEGER"  name="press" label="Pressure hPa" widthheight="300" min="880" max="1090" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
+<variable  component="gauge"  type="INTEGER"  name="$$humm$$" label="Hummidity %" widthheight="300" min="0" max="100" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
+<variable  component="gauge"  type="INTEGER"  name="$$temp$$" label="temperature C" widthheight="300" min="-60" max="60" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
+<variable  component="gauge"  type="INTEGER"  name="$$press$$" label="Pressure hPa" widthheight="300" min="880" max="1090" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
 <!--Chart begin 9797-->
 <div class="demo-card-wide mdl-card mdl-shadow--2dp" style="width:calc( 100vw - 10px) ;margin:5px;float:right;position:relative">
 	<div class="mdl-card__supporting-text">
