next tutorials and stuff

--- a/020_RpiCar/final.html
+++ b/020_RpiCar/final.html
@@ -1,2 +1,2 @@
-Contratulations Everything went OK :)<br/>
-Please Follow Instrucitons next to device belt to run Your project
+Contratulations Project Build Successful :)<br/>
+Please follow instrucitons next to device belt to run your project
