--- a/020_RpiCar/connections.html
+++ b/020_RpiCar/connections.html
@@ -12,21 +12,21 @@
 </a>
 
 
-<a href="connections.png" download="connections">downlaod Image in full size</a>
+<a href="connections.png" download="connections">Downlaod image in full size</a>
 
 <h2>PCB</h2>
-You can also download files of PCB for cleaner connenctions
+You can also download files of PCB for better understanding of connenctions
 <img src="pcb.png" style="width:100%" alt="connections"/>
 <a href="https://remoteme.org/public/projects/rpiCar/pcb.zip" download="pcb">download PCB files</a>
 <ol start="1">
-    <li>PWM input for drive motors Should be connected to PWM module 15’th and 16th pins</li>
-    <li>Power input for drive motors (check what maximum voltage your motors can work with)</li>
-    <li>Power for RaspberryPi and PWM module – have to be exactly 5V</li>
-    <li>Drive motor outputs (there are two outputs because we will pair drive motors )</li>
-    <li>Servo Mechanisms power – also You have to check what voltage is good for them</li>
-    <li>Jumper its present power from 5th input will power also drive motors so no need to connect anything to input 2</li>
-    <li>Jumper if present RaspberryPi will be power from 3rd input – before put jumper here check if connections are OK – You don’t want to burn your RPi</li>
-    <li>Lets solder here cables since we don’t need logic converters</li>
+    <li>PWM input for motor driver should be connected to PWM module 15th and 16th pins</li>
+    <li>Power input for motor driver (check what maximum voltage your motors can work with)</li>
+    <li>Power for RasbperryPi and PWM module – must be exactly 5V</li>
+    <li>Motor driver outputs (there are two outputs because we will pair the motors)</li>
+    <li>Servo Mechanisms power – also you have to check what voltage is good for your servos (refer the datasheet)</li>
+    <li>Jumper if present power from 5th input will also power motor drive so no need to connect anything to input 2</li>
+    <li>Jumper if present Raspberry Pi will be powered from 3rd input – before putting jumper here check if connections are correct – You don’t want to burn your Pi</li>
+    <li>Lets solder jumper cables here since we don’t need logic converters</li>
 </ol>
 
 </body>
