next tutrial + cosmetics

--- a/00030_ESP_Temp_Press_Humm/final.html
+++ b/00030_ESP_Temp_Press_Humm/final.html
@@ -1,2 +1,2 @@
-Contratulations project built succesfully :)<br/>
+Contratulations Project Build Successful :)<br/>
 Please follow instrucitons next to device belt to run your project
