--- a/00030_ESP_Temp_Press_Humm/overview.html
+++ b/00030_ESP_Temp_Press_Humm/overview.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Blinking led</h1>
-This is one of the simplest project for beginners. From the webPage using a button you can change the state of LED attached to the ESP. 
-Ofocurse as always with RemoteMe you will be able to control your LED over the internet from any corner of the world :)
+<h1>Temperature Hummidity and pressure measurements</h1>
+Simple station, results can be see on the webPage as gauges, and also historical measurements on the chart.
+
 
 </body>
 
