--- a/00030_ESP_Temp_Press_Humm/connections.html
+++ b/00030_ESP_Temp_Press_Humm/connections.html
@@ -6,8 +6,10 @@
 <body>
 <img src="connections.png" alt="connections"/>
 <ul>
-    <li> LED Cathode through a resistor to GND</li>
-    <li> LED Anode to D1 pin of ESP</li>
+    <li> SDA to pin D2</li>
+    <li> SCL to pin D1</li>
+    <li> GND to pin GND</li>
+    <li> 3.3v to pin 3.3v</li>
 </ul>
 </body>
 
