--- a/00030_ESP_Temp_Press_Humm/overview.html
+++ b/00030_ESP_Temp_Press_Humm/overview.html
@@ -4,9 +4,11 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Temperature Hummidity and pressure measurements</h1>
+<h1>Temperature Humidity and pressure measurements</h1>
 Simple station, results can be see on the webPage as gauges, and also historical measurements on the chart.
 
+
+<a href="https://youtu.be/zMffruFELFI" target="_blank" >Youtube tutorial </a>
 
 </body>
 
