--- a/00030_ESP_Temp_Press_Humm/webpage/index.html
+++ b/00030_ESP_Temp_Press_Humm/webpage/index.html
@@ -47,7 +47,7 @@
 <connectionstatus  webSocket="true" directConnection="false" camera="false" ></connectionstatus>
 <a href="history.html" style="display:block;width:calc(100% - 50px);margin:10px" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Show history</a>
 
-<variable  component="gauge"  type="INTEGER"  name="$$humm$$" label="Hummidity %" widthheight="300" min="0" max="100" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
+<variable  component="gauge"  type="INTEGER"  name="$$humm$$" label="Humidity %" widthheight="300" min="0" max="100" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
 <variable  component="gauge"  type="INTEGER"  name="$$temp$$" label="temperature C" widthheight="300" min="-60" max="60" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
 <variable  component="gauge"  type="INTEGER"  name="$$press$$" label="Pressure hPa" widthheight="300" min="880" max="1090" tickDelta="20" minorTick="2" borders="false" valuebox="true" ></variable>
 
