--- a/00005_ESP_LedButtonPushNotification/webpage/index.html
+++ b/00005_ESP_LedButtonPushNotification/webpage/index.html
@@ -42,6 +42,7 @@
 	var thisDeviceId=####deviceId#;
 </script>
 
+<!--You can add with wizard-->
 <variable  component="button"  type="BOOLEAN" style="width:calc(100% - 100px);margin:50px"  name="$$led_variable$$" label="$$led_variable$$" ></variable>
 </body>
 </html>
