--- a/00005_ESP_LedButtonPushNotification/webpage/index.html
+++ b/00005_ESP_LedButtonPushNotification/webpage/index.html
@@ -43,6 +43,7 @@
 </script>
 
 <!--You can add with wizard-->
+<connectionstatus  webSocket="true" directConnection="false" camera="false" ></connectionstatus>
 <variable  component="button"  type="BOOLEAN" style="width:calc(100% - 100px);margin:50px"  name="$$led_variable$$" label="$$led_variable$$" ></variable>
 </body>
 </html>
