--- a/00005_ESP_LedButtonPushNotification/webpage/index.html
+++ b/00005_ESP_LedButtonPushNotification/webpage/index.html
@@ -32,7 +32,7 @@
     <script src="/libs/operationTimer.js"></script>
     <script src="/libs/remoteMeComponents.js"></script>
     <link rel="stylesheet" href="/libs/remoteMeComponents.css">
-
+    <link rel="stylesheet" href="/libs/animate.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
