--- a/00401_Message_Code_Playing/overview.html
+++ b/00401_Message_Code_Playing/overview.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <h1>Send Message device to device</h1>
-Sometimes You want to send some data into your ESP or WebPage, With RemoteMe You can do it simple using userMessages. In this example WebPage is sending string and double value in one user message. And ESP receive message decode it and print using serial.
+Sometimes You want to send some data into your ESP or WebPage, With RemoteMe You can do it simple using userMessages.
+In this example WebPage is sending string and double value in one user message. And ESP receive message decode it and print using serial.
+Then esp  modifies recevied string and double and send it back. At the webPage You can receive this message and see total time of communication.
+<br/>
 By default all User messages goes through RemoteMe but by uncommenting some marked code in ESP You can turn on direct connection. With direct connection if webPage and ESP is in the same local network all messages will be send directly to you ESP.
 
 <br/>
