--- a/00401_Message_Code_Playing/webpage/index.html
+++ b/00401_Message_Code_Playing/webpage/index.html
@@ -46,14 +46,16 @@
 <body>
 <script>
 	var thisDeviceId=####deviceId#;
-	var raspberryPiDeviceId=####raspberrypideviceid#;
 </script>
 number To Send:
 <input type="number" id="floatInput" step="0.001" value="-123.456"/><br/>
 Text To Send:
-<input type="text"  id="textInput" value="Hello ESP" ><br/>
+<input type="text"  id="textInput" value="There is some string to send" ><br/>
 <button onclick="onButtonClick()" >Send in one message</button>
-
+<br/>
+<br/>
+Message from esp:
+<div id="output">NO message yet </div>
 <connectionstatus  webSocket="true" directConnection="true" camera="false" ></connectionstatus>
 </body>
 </html>
