--- a/00400_Simple_Code_Playing/overview.html
+++ b/00400_Simple_Code_Playing/overview.html
@@ -12,7 +12,7 @@ In this example is shown how to manipulate and read variable change events with 
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br/>
-This example shows how to set and read different kind of local variables.
+This example shows how to set and read different kind of local variables. It's for both ESP and RasbperryPi but both are not required You can install program only at one of the device
 </body>
 
 </html>
