--- a/00401_Message_Code_Playing/overview.html
+++ b/00401_Message_Code_Playing/overview.html
@@ -13,7 +13,8 @@ By default all User messages goes through RemoteMe but by uncommenting some mark
 
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
-
+<br>
+It's for both ESP and RasbperryPi but both are not required You can install program only at one of the device
 </body>
 
 </html>
