--- a/00400_Simple_Code_Playing/webpage/final.html
+++ b/00400_Simple_Code_Playing/webpage/final.html
@@ -1,1 +1,1 @@
-WebPage created sucessfully. Click "Open" to see how it's working, then You can check the sourcecode
+WebPage created sucessfully. Click "Open" to see how it's working, then you can check the sourcecode
