--- a/00401_Message_Code_Playing/overview.html
+++ b/00401_Message_Code_Playing/overview.html
@@ -4,17 +4,17 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Send Message device to device</h1>
-Sometimes You want to send some data into your ESP or WebPage, With RemoteMe You can do it simple using userMessages.
-In this example WebPage is sending string and double value in one user message. And ESP receive message decode it and print using serial.
-Then esp  modifies recevied string and double and send it back. At the webPage You can receive this message and see total time of communication.
+<h1>Send Messages device to device</h1>
+Sometimes you want to send some data into your ESP or WebPage, with RemoteMe you can do it simply using userMessages.
+In this example WebPage is sending string and double value in one user message. And ESP receives message decodes it and print using serial.
+Then esp  modifies recevied string and double and send it back. At the webPage you can receive these messages and see total time of communication.
 <br/>
-By default all User messages goes through RemoteMe but by uncommenting some marked code in ESP You can turn on direct connection. With direct connection if webPage and ESP is in the same local network all messages will be send directly to you ESP.
+By default all user messages go through RemoteMe but by uncommenting some marked code in ESP you can turn on direct connection. With direct connection if webPage and ESP is in the same local area network all messages will be sent directly to your ESP.
 
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br>
-It's for both ESP and RasbperryPi but both are not required You can install program only at one of the device
+It's for both ESP and RasbperryPi but both are not required you can install program at any one of the device
 </body>
 
 </html>
