--- a/00310_TAKE_PHOTO_ESP_32/esp/final.html
+++ b/00310_TAKE_PHOTO_ESP_32/esp/final.html
@@ -1,6 +1,6 @@
-Programming ESP32_CAM is little bit tricky <br/> Hovewer there is good tutorial showing how to upload your sketch and install needed boards into your ArduinoIDE:
+Programming ESP32_CAM is little bit tricky <br/> However there is good tutorial showing how to upload your sketch and install needed boards into your ArduinoIDE:
 <a  href ="https://randomnerdtutorials.com/esp32-cam-video-streaming-face-recognition-arduino-ide/">Tutorial by Rui Santos</a>
 <br/>
 You will need to follow <b>Install the ESP32 add-on</b> and <b>ESP32-CAM Upload Code</b> section to be able to upload your code.
 <br/>
-<br/> After upload the code remember to unplug <code>Gpio 0</code> from the <code>ground</code> and click reset button on ESP
+<br/> After uploading the code remember to unplug <code>Gpio 0</code> from the <code>ground</code> and click reset button on ESP
