--- a/00400_Simple_Code_Playing/overview.html
+++ b/00400_Simple_Code_Playing/overview.html
@@ -8,11 +8,11 @@
 It's very simple project with just a code inside. You can open script.js, styles.css or index.html and see how to integrate with RemoteMe using plain code.
 There is also simple arduino code too.
 <br/>
-In this example is shown how to manipulate and read variable change events with javascript and cpp.
+In this example it's shown how to manipulate and read variable change events with javascript and cpp.
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br/>
-This example shows how to set and read different kind of local variables. It's for both ESP and RasbperryPi but both are not required You can install program only at one of the device
+This example shows how to set and read different kind of local variables. It's for both ESP and RasbperryPi but both are not required you can install program on any one of the device
 </body>
 
 </html>
