--- a/00310_TAKE_PHOTO_ESP_32/overview.html
+++ b/00310_TAKE_PHOTO_ESP_32/overview.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Blinking led</h1>
-This is one of the simplest project for beginners. From the webPage using a button you can change the state of LED attached to the ESP. 
-Ofocurse as always with RemoteMe you will be able to control your LED over the internet from any corner of the world :)
+<h1>Take a photo</h1>
+Esp_32 makes a photo after button click and image is saved on webPage files and display at WWW. Project can be easly extended for example to send photo after ESP will be triggered by movesensor module
+
 
 </body>
 
