add for quickstart

--- a/00310_TAKE_PHOTO_ESP_32/connections.html
+++ b/00310_TAKE_PHOTO_ESP_32/connections.html
@@ -19,7 +19,7 @@ Upload procedure:
     <li>set everything in arduino IDE as at screen</li>
     <li>connect <code>gpio-0</code> to <code>ground</code></li>
     <li>click restart button at ESP</li>
-    <li>upload code and waits to finish</li>
+    <li>upload code and wait to finish</li>
     <li>unplug <code>gpio-0</code> from <code>ground</code></li>
     <li>click restart button at ESP</li>
 </ul>
