--- a/00310_TAKE_PHOTO_ESP_32/overview.html
+++ b/00310_TAKE_PHOTO_ESP_32/overview.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Take a photo</h1>
-Esp_32 makes a photo after button click, image is saved on webPage files and display at WWW. Project can be easily extended, for example to send photo after ESP will be triggered by move sensor module.
+Esp_32 takes a photo when a button is clicked, image is saved on webPage files and displayed at WWW. Project can be easily extended, for example to send photo after ESP is triggered by proximity sensor module.
 
 
 </body>
