--- a/00301_ESP_Temp_Press_Humm_2/connections.html
+++ b/00301_ESP_Temp_Press_Humm_2/connections.html
@@ -6,10 +6,13 @@
 <body>
 <img src="connections.png" alt="connections"/>
 <ul>
-    <li> SDA to pin D2</li>
+    <b>
+	<li> SDA to pin D2</li>
     <li> SCL to pin D1</li>
     <li> GND to pin GND</li>
-    <li> 3.3v to pin 3.3v</li>
+    <li> VIN to pin 3.3v</li></br>
+	Note: Connect SDA & SCL pins of display and BME280 to ESP. All GND pins should be connected together.	
+	</b>
 </ul>
 </body>
 
