--- a/00301_ESP_Temp_Press_Humm_2/overview.html
+++ b/00301_ESP_Temp_Press_Humm_2/overview.html
@@ -4,11 +4,11 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Temperature Humidity and pressure measurements</h1>
-Simple station, results can be see on the webPage as gauges, and also historical measurements on the chart.
+<h1>Simple Weather Station</h1>
+Data can be seen on the webPage as units and also historical measurements on the chart.
 
 
-<a href="https://youtu.be/zMffruFELFI" target="_blank" >Youtube tutorial </a>
+<a href="https://youtu.be/zMffruFELFI" target="_blank" >YouTube tutorial </a>
 
 </body>
 
