--- a/00402_SyncMessage_Code_Playing/webpage/index.html
+++ b/00402_SyncMessage_Code_Playing/webpage/index.html
@@ -35,6 +35,8 @@
     <script src="/libs/variables.js"></script>
     <script src="/libs/operationTimer.js"></script>
     <script src="/libs/remoteMeComponents.js"></script>
+    <script src="/libs/dialog-polyfill/dialog-polyfill.js"></script>
+    <link href="/libs/dialog-polyfill/dialog-polyfill.css" rel="stylesheet">
     <link rel="stylesheet" href="/libs/remoteMeComponents.css">
     <link rel="stylesheet" href="/libs/animate.min.css">
 
