--- a/00301_ESP_Temp_Press_Humm_2/overview.html
+++ b/00301_ESP_Temp_Press_Humm_2/overview.html
@@ -4,8 +4,12 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Simple Weather Station</h1>
-Data can be seen on the webPage as units and also historical measurements on the chart.
+<h1>Simple Weather Station with forecast</h1>
+Simple weather station with using Wemos D1 mini, BME280 and OLED display,
+Get indoor weather data like Temperature, Humidity and Pressure.
+Also get information about current weather and forecast for tomorrow.
+All this data will be displayed on OLED screen and Webpage. If you want you can also install the android or IOS
+app to see the weather on-the-go
 
 
 <a href="https://youtu.be/zMffruFELFI" target="_blank" >YouTube tutorial </a>
