unhidden tyoutube project

--- a/00350_RPI_Youtube/overview.html
+++ b/00350_RPI_Youtube/overview.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <h1>Youtube broadcast</h1>
-This project is going to broadcast video from your USB camera to Youtube live streaming. What is the best in it is that camera is sending image to the youtube only if somebody is watching.
-<br/> When somebody opens webpage with youtube iframe the rasbperryPi starts broadcasting video from USB camera, and if the page is closed and in 10s is not reopened the camera is turning off
+This project  broadcasts video from your USB camera to Youtube live streaming. What is the best in it is that camera is sending image to the youtube only if somebody is watching.
+<br/> When somebody opens webpage with youtube iframe the rasbperryPi starts broadcasting video from USB camera, and if the page is closed and in 10s is not reopened the camera turns off
 
 </body>
 
