repair youtube project

--- a/00402_SyncMessage_Code_Playing/overview.html
+++ b/00402_SyncMessage_Code_Playing/overview.html
@@ -12,7 +12,7 @@ Ofcourse this usecase is trivial and useless in real life but will helps You to 
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br>
-It's for both ESP and RasbperryPi but both are not required You can install program only at one of the device
+It's for both ESP and RaspberryPi but both are not required You can install program only at one of the device
 </body>
 
 </html>
