--- a/020_RpiCar/connections.html
+++ b/020_RpiCar/connections.html
@@ -21,7 +21,7 @@ You can also download files of PCB for better understanding of connenctions
 <ol start="1">
     <li>PWM input for motor driver should be connected to PWM module 15th and 16th pins</li>
     <li>Power input for motor driver (check what maximum voltage your motors can work with)</li>
-    <li>Power for RasbperryPi and PWM module – must be exactly 5V</li>
+    <li>Power for Raspberry Pi and PWM module – must be exactly 5V</li>
     <li>Motor driver outputs (there are two outputs because we will pair the motors)</li>
     <li>Servo Mechanisms power – also you have to check what voltage is good for your servos (refer the datasheet)</li>
     <li>Jumper if present power from 5th input will also power motor drive so no need to connect anything to input 2</li>
