--- a/00350_RPI_Youtube/overview.html
+++ b/00350_RPI_Youtube/overview.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Youtube broadcast</h1>
 This project  broadcasts video from your USB camera to Youtube live streaming. What is the best in it is that camera is sending image to the youtube only if somebody is watching.
-<br/> When somebody opens webpage with youtube iframe the rasbperryPi starts broadcasting video from USB camera, and if the page is closed and in 10s is not reopened the camera turns off
+<br/> When somebody opens webpage with youtube iframe the Raspberry Pi starts broadcasting video from USB camera, and if the page is closed and in 10s is not reopened the camera turns off
 
 </body>
 
