--- a/00400_Simple_Code_Playing/overview.html
+++ b/00400_Simple_Code_Playing/overview.html
@@ -12,7 +12,7 @@ In this example it's shown how to manipulate and read variable change events wit
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br/>
-This example shows how to set and read different kind of local variables. It's for both ESP and RasbperryPi but both are not required you can install program on any one of the device
+This example shows how to set and read different kind of local variables. It's for both ESP and Raspberry Pi but both are not required you can install program on any one of the device
 </body>
 
 </html>
