--- a/00401_Message_Code_Playing/overview.html
+++ b/00401_Message_Code_Playing/overview.html
@@ -14,7 +14,7 @@ By default all user messages go through RemoteMe but by uncommenting some marked
 <br/>
 For code documentation please visit <a href="https://remoteme.org/public/documentation/sources/" target="_blank" > Source code documantation in RemoteMe</a>
 <br>
-It's for both ESP and RasbperryPi but both are not required you can install program at any one of the device
+It's for both ESP and RaspberryPi but both are not required you can install program at any one of the device
 </body>
 
 </html>
