start adding new project

--- a/00006_ESP_MotionTriggerPushNotification/overview.html
+++ b/00006_ESP_MotionTriggerPushNotification/overview.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Push notification</h1>
-When button connected to ESP is pressed - notification to your andorid app is sent. You dont have to isntall anything at your smartphone, only scan a QR code :). <br/>
+<h1>Push notification whe movement detected</h1>
+When 2 movements in 40s are detected ESP sends push notification<br/>
 More about smartphone PWA application You can read <a target="blank_" href="https://remoteme.org/android-ios-application/">here</a> <br/>
 More about push notification read  <a  target="blank_" href="https://remoteme.org/push-notifications/">here</a> <br/>
 <a href="https://www.youtube.com/watch?v=1Ukg-jnMGQk" target="_blank" >Youtube tutorial for this project </a>
