--- a/00006_ESP_MotionTriggerPushNotification/connections.html
+++ b/00006_ESP_MotionTriggerPushNotification/connections.html
@@ -7,7 +7,7 @@
 <img src="connections.png" alt="connections"/>
 <ul>
     <li> LED Cathode through a resistor to GND</li>
-    <li> LED Anode to Low level converter pin</li>
+    <li> LED Anode to motion sensor output</li>
 	<li> Motion sensor Vcc to 5v (Vin) </li>
 	<li> Motion sensor GND to GND </li>
 	<li> Motion sensor output to D5 </li>
