next quick start project

--- a/00311_TAKE_PHOTO_PIR_ESP_32/connections.html
+++ b/00311_TAKE_PHOTO_PIR_ESP_32/connections.html
@@ -6,11 +6,14 @@
 <body>
 <img src="connections.png" alt="connections"/>
 <ul>
-    <li> LED Cathode through a resistor to GND</li>
-    <li> LED Anode to motion sensor output</li>
+
+	<li> LED Cathode through a resistor to GND</li>
+	<li> LED Anode to motion sensor output</li>
 	<li> Motion sensor Vcc to 5v (Vin) </li>
 	<li> Motion sensor GND to GND </li>
-	<li> Motion sensor output to D5 </li>
+	<li> Motion sensor output to IO12 </li>
+	<li> Power 5v to 5v (Vin), GND to GND</li>
+
 
 </ul>
 </body>
