--- a/00311_TAKE_PHOTO_PIR_ESP_32/overview.html
+++ b/00311_TAKE_PHOTO_PIR_ESP_32/overview.html
@@ -4,9 +4,8 @@
 <link rel="stylesheet" href="../general.css" />
 </head>
 <body>
-<h1>Take a photo</h1>
-Esp_32 takes a photo when a button is clicked, image is saved on webPage files and displayed at WWW. Project can be easily extended, for example to send photo after ESP is triggered by proximity sensor module.
-
+<h1>Take a photo when move is detected</h1>
+Esp_32 takes a photo when move is detected, or when button at mobile app is pressed. When movement is detected ESP also send notification to the smartphone with android
 
 </body>
 
