update gaelery component

--- a/00311_TAKE_PHOTO_PIR_ESP_32/overview.html
+++ b/00311_TAKE_PHOTO_PIR_ESP_32/overview.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Take a photo when move is detected</h1>
-Esp_32 takes a photo when move is detected, or when button at mobile app is pressed. When movement is detected ESP also send notification to the smartphone with android
+Esp_32 takes a photo when move is detected, or when button at mobile app is pressed. When movement is detected ESP also send notification to the smartphone with android or to the desktop browser
 
 </body>
 
